--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-﻿task1/untitled.iml
-task1/.idea
-task1/lib/
-task1/logs/
-task1/out/
+﻿/task1/untitled.iml
+/task1/.idea
+/task1/lib/
+/task1/logs/
+/task1/out/
+/task2/task2.iml
+/task2/.idea
+/task2/lib/
+/task2/logs/
+/task2/out/
