DemoThreads is added

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /task2/lib/
 /task2/logs/
 /task2/out/
-/DemoThreads/untitled.iml
+/DemoThreads/DemoThreads.iml
 /DemoThreads/out
 /DemoThreads/data
 /DemoThreads/.idea
