--- a/task4/pom.xml
+++ b/task4/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>task4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -17,6 +17,27 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+    </dependency>
+
     </dependencies>
 
 
