--- a/final/pom.xml
+++ b/final/pom.xml
@@ -19,6 +19,11 @@
                 <version>2.4.1</version>
             </dependency>
 
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.60</version>
+        </dependency>
 
 
 
